--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "nodebb-plugin-dbsearch": "6.2.5",
         "nodebb-plugin-emoji": "5.1.15",
         "nodebb-plugin-emoji-android": "4.0.0",
+        "nodebb-plugin-location-to-map": "^0.1.1",
         "nodebb-plugin-markdown": "12.2.6",
         "nodebb-plugin-mentions": "4.4.3",
         "nodebb-plugin-ntfy": "1.7.4",
@@ -156,6 +157,7 @@
         "@apidevtools/swagger-parser": "10.1.0",
         "@commitlint/cli": "19.3.0",
         "@commitlint/config-angular": "19.3.0",
+        "chai": "^5.2.0",
         "coveralls": "3.1.1",
         "eslint": "8.57.0",
         "eslint-config-nodebb": "0.2.1",
@@ -165,11 +167,12 @@
         "husky": "8.0.3",
         "jsdom": "24.0.0",
         "lint-staged": "15.2.2",
-        "mocha": "10.4.0",
+        "mocha": "^10.4.0",
         "mocha-lcov-reporter": "1.3.0",
         "mockdate": "^3.0.5",
         "nyc": "15.1.0",
         "sinon": "^19.0.2",
+        "sinon-chai": "^4.0.0",
         "smtp-server": "3.13.4"
     },
     "optionalDependencies": {
