--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
         "grunt": "1.6.1",
         "grunt-contrib-watch": "1.1.0",
         "husky": "8.0.3",
+        "jest": "^29.7.0",
         "jsdom": "24.0.0",
         "lint-staged": "15.2.2",
         "mocha": "10.4.0",
