--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
         "@apidevtools/swagger-parser": "10.1.0",
         "@commitlint/cli": "19.3.0",
         "@commitlint/config-angular": "19.3.0",
+        "chai": "^5.2.0",
         "coveralls": "3.1.1",
         "eslint": "8.57.0",
         "eslint-config-nodebb": "0.2.1",
@@ -167,7 +168,7 @@
         "jest": "^29.7.0",
         "jsdom": "24.0.0",
         "lint-staged": "15.2.2",
-        "mocha": "10.4.0",
+        "mocha": "^10.4.0",
         "mocha-lcov-reporter": "1.3.0",
         "mockdate": "^3.0.5",
         "nyc": "15.1.0",
