--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "archiver": "7.0.1",
         "async": "3.2.5",
         "autoprefixer": "10.4.19",
+        "axios": "^1.8.1",
         "bcryptjs": "2.4.3",
         "benchpressjs": "2.5.1",
         "body-parser": "1.20.2",
