--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "archiver": "7.0.1",
         "async": "3.2.5",
         "autoprefixer": "10.4.19",
-        "axios": "^1.8.1",
         "bcryptjs": "2.4.3",
         "benchpressjs": "2.5.1",
         "body-parser": "1.20.2",
@@ -158,9 +157,10 @@
         "@apidevtools/swagger-parser": "10.1.0",
         "@commitlint/cli": "19.3.0",
         "@commitlint/config-angular": "19.3.0",
+        "axios": "^1.8.1",
         "chai": "^5.2.0",
         "coveralls": "3.1.1",
-        "eslint": "8.57.0",
+        "eslint": "^8.57.1",
         "eslint-config-nodebb": "0.2.1",
         "eslint-plugin-import": "2.29.1",
         "grunt": "1.6.1",
