--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "main": "app.js",
     "scripts": {
         "start": "node loader.js",
-        "lint": "eslint --cache ./nodebb .",
+        "lint": "eslint --cache ./src ./test .",
         "test": "nyc --reporter=html --reporter=text-summary mocha",
         "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
         "coveralls": "nyc report --reporter=text-lcov | coveralls && rm -r coverage"
