--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
         "@apidevtools/swagger-parser": "10.1.0",
         "@commitlint/cli": "19.3.0",
         "@commitlint/config-angular": "19.3.0",
+        "artillery": "^2.0.22",
         "chai": "^5.2.0",
         "coveralls": "3.1.1",
         "eslint": "8.57.0",
