--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
         "mocha": "^10.4.0",
         "mocha-lcov-reporter": "1.3.0",
         "mockdate": "^3.0.5",
-        "nyc": "15.1.0",
+        "nyc": "^15.1.0",
         "sinon": "^19.0.2",
         "sinon-chai": "^4.0.0",
         "smtp-server": "3.13.4"
